Update the ui with new buttons

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <button class="add-book">add book</button>
         </div>
         <div class="books">
-          <div class="book">
+          <!-- <div class="book">
             <h3>title</h3>
             <p>author</p>
             <p>64 pages</p>
             <p>read</p>
             <button>delete</button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
