--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
         <button type="submit">submit</button>
       </form>
     </div>
-    <script src="script.js" />
+    <script src="script.js"></script>
   </body>
 </html>
